--- a/css/浮动.html
+++ b/css/浮动.html
@@ -22,6 +22,7 @@
         clear:both;
     } */
     .parent::after{
+        /* 伪元素 */
         content: "";
         display: block;
         clear:both;
@@ -33,7 +34,7 @@
     <div>a</div>
     <div>b</div>
     <div>c</div>
-    <p>hello</p>
+    <!-- <p></p> -->
     </div>  
     <div class="other"></div>
 </body>
