--- a/vue/练习1.html
+++ b/vue/练习1.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="./js/vue.js"></script>
 </head>
 
 <body>
     <div id="app">
-        <input type="text" v-model="msg" placeholder="搜索">搜索
+        <input type="text" v-model="doodName" placeholder="搜索">搜索
         <br />
-        <input type="text" v-model="msg" placeholder="名称">
-        <input type="text" v-model="msg" placeholder="0">添加
+        <input type="text" v-model="goodPrice" placeholder="名称">
+        <input type="text" v-model="msg" placeholder="0" >添加
         <br />
         <table>
             <thead>
@@ -26,11 +29,11 @@
                 </tr>
             </thead>
             <tbody>
-                <tr v-for="(item, index) in choose" v-on:click="touch" v-bind:class="{active:isActive}">
+                <tr v-for="(item, index) in choose" >
                     <th scope="row"><input type="checkbox"></th>
                     <td>{{item.name}}</td>
                     <td>{{item.price}}</td>
-                    <td><button>删除</button></td>
+                    <td> <button type="button" class="btn btn-primary btn-xs">删除</button></td>
                 </tr>
             </tbody>
 
@@ -42,9 +45,8 @@
         new Vue({
             el: "#app",
             data: {
-                name:"",
-                price:"",
-
+                goodName:"",
+                goodPrice:"",
                 choose: [
                     {
                         name: "衣服",
@@ -68,10 +70,15 @@
                     }
                 ]
             },
-            methods:{
-                touch(){
-                    
-                }
+            methods: {
+               addHandle(){
+                   console.log(this.goodName);
+                   console.log(this.goodPrice);
+                   this.choose.push({
+                       name:this.goodName,
+                       price:this.goodPrice,
+                   })
+               }
             }
         })
     </script>
