--- a/vue/9.todotest.html
+++ b/vue/9.todotest.html
@@ -1,150 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <style>
-    .active{
-      background: #ddd;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <style>
+        .container {
+            padding-top: 100px;
+        }
+
+        .form-inline {
+            margin-bottom: 20px;
+        }
+
+        .active {
+            background-color: red;
+        }
+    </style>
+    <script src="./js/vue.js"></script>
 </head>
+
 <body>
-  <div id="app">
-    <div>
-        <input type="text" placeholder="搜索" v-model="searchText"><input type="button" @click="search" value="搜索">
-    </div> 
-    <div>
-      <input type="text" placeholder="名称" v-model="name"><input type="number" placeholder="价格" v-model="price"><input type="button" @click="add"  value="添加">
+    <div class="container" id="app">
+        <form class="form-inline">
+            <div class="form-group">
+                <div class="input-group">
+                    <input type="text" v-model="goodSearch" class="form-control" id="exampleInputAmount"
+                        placeholder="搜索名称">
+                </div>
+            </div>
+            <button type="button" class="btn btn-primary" @click="search">搜索</button>
+        </form>
+        <form class="form-inline">
+            <div class="form-group">
+                <label for="exampleInputName2">商品名称</label>
+                <input type="text" v-model="goodName" class="form-control" id="exampleInputName2" placeholder="请输入商品名称">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail2">商品价格</label>
+                <input type="email" v-model="goodPrice" class="form-control" id="exampleInputEmail2"
+                    placeholder="请输入商品价格">
+            </div>
+            <button type="button" class="btn btn-default" @click="addHandle">添加</button>
+        </form>
+        <div>
+
+            <table class="table table-condensed">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>商品名称</th>
+                        <th>商品价格</th>
+                        <th>操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr :class="{active:item.isChecked}" v-for="(item,index) in dataList" @click="checkLine(index)">
+                        <th scope="row">
+                            <input type="checkbox" name="goods" :value="item.id" v-model="gChe">
+                        </th>
+                        <td>{{item.name}}</td>
+                        <td>{{item.price}}</td>
+                        <td><button type="button" class="btn btn-primary btn-xs" @click.stop="delsingle(item.id)">删除</button></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">总价</td>
+                        <td > {{gSum}}</td>
+                        <td><button type="button" class="btn btn-primary btn-xs" @click.stop="delCheck">删除选中</button></td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
     </div>
-    <table>
-      <thead>
-        <th>选择</th>
-        <th>商品名称</th>
-        <th>商品价格</th>
-        <th>操作</th>
-      </thead>
-      <tbody>
-        <tr v-for="(item, index) in productList" :class="{active:item.isSelected}" @click="item.isSelected=!item.isSelected" :key="index">
-          <td><input type="checkbox" name="cb" v-model="checkArr" :value="item.id"></td>
-          <td>{{item.name}}</td>
-          <td>{{item.price}}</td>
-          <td><input type="button" value="删除" v-on:click="delSig(item.id)"></td>
-        </tr>
-        <tr>
-          <td><button @click="delCheck">删除选中</button></td>
-          <td colspan="3">价格：{{sum}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <script src="./js/vue.js"></script>
-  <script>
-    new Vue({
-      el:"#app",
-      data:{
-        name:"",
-        price:0,
-        nowId:"5",
-        searchText:"",
-        productList: [{
-            id:"1",
-            name: '衣服',
-            price: 123,
-            isSelected: false,
-        }, {
-            id:"2",
-            name: '裤子',
-            price: 456,
-            isSelected: false,
-        }, {
-            id:"3",
-            name: '鞋',
-            price: 444,
-            isSelected: false,
-        }, {
-            id:"4",
-            name: '帽子',
-            price: 666,
-            isSelected: false,
-        }, {
-            id:"5",
-            name: '手套',
-            price: 88,
-            isSelected: false,
-        }
-      ],
-      },
-      methods: {
-        delCheck(){
-          // let arr = [];
-          // this.productList.forEach(function(val,index){
-          //   if(!val.isSelected){
-          //     arr.push(val);
-          //   }
-          // })
-          // this.productList = arr;
-          var _this = this
-          this.productList.forEach(function(val,index){
-            if(val.isSelected){
-              _this.delSig(val.id);
+    <script>
+        new Vue({
+            el: "#app",
+            data: {
+                goodName: "",
+                goodPrice: "",
+                goodSearch: "",
+                nowid:5,
+                gCheck: [],
+                dataList: [
+                    {
+                        id: "1",
+                        name: "衣服",
+                        price: "12",
+                        isChecked: false
+                    },
+                    {
+                        id: "2",
+                        name: "裤子",
+                        price: "14",
+                        isChecked: false
+                    },
+                    {
+                        id: "3",
+                        name: "鞋子",
+                        price: "45",
+                        isChecked: false
+                    },
+                    {
+                        id: "4",
+                        name: "帽子",
+                        price: "20",
+                        isChecked: false
+                    }
+                ]
+            },
+            methods: {
+                delCheck(){
+                    let newArr =[]
+                    newArr = this.dataList.filter(function(item){
+                        if(!item.isChecked){
+                            return item;
+                        }
+                    })
+                    this.dataList = newArr;
+                },
+                delsingle(id){
+                    let newArr = [];
+                    newArr = this.dataList.filter(function(item){
+                        if(item.id!=id){
+                            return item;
+                        }
+                    })
+                    console.log(newArr);
+                    this.dataList = newArr;
+                },
+                checkLine(index) {
+                    console.log(index)
+                    this.dataList[index].isChecked = !this.dataList[index].isChecked;
+                },
+                search() {
+                    let thisText = this.goodSearch;
+                    let newArr = this.dataList.filter( (item, index, arr) => {
+                        console.log(this);
+                        if (item.name.includes(thisText)) {
+                            return item;
+                        }
+                    })
+                    this.dataList = newArr
+                },
+                addHandle() {
+                    console.log(this.goodName, this.goodPrice);
+                    this.dataList.push(
+                        {
+                            name: this.goodName,
+                            price: this.goodPrice,
+                            isChecked:false,
+                            id:this.nowid++
+                        }
+                    )
+                }
+            },
+            computed: {
+                gChe() {
+                    let arr = [];
+                    this.dataList.map(function (item, index) {
+                        if (item.isChecked) {
+                            arr.push(item.id)
+                        }
+                    })
+                    return arr
+                },
+                gSum() {
+                    let sum = 0;
+                    this.dataList.map(function (item, index) {
+                        if (item.isChecked) {
+                            sum += parseInt(item.price)
+                        }
+                    })
+                    return sum;
+                }
             }
-          })
-        },
-        delSig(id){
-          var thisArr = [];
-          thisArr = this.productList.filter(function(val,index,arr){
-            if(val.id != id){
-              return val
-            }
-          })
-          this.productList = thisArr;
-        },
-        add(){
-          let obj = {
-            id:++this.nowId,
-            name:this.name,
-            price:this.price,
-            isSelected:false
-          }
-          this.productList.push(obj)
-        },
-        search(){
-          let _this=this
-          let thisArr = [];
-          thisArr = this.productList.filter(function(val,index){
-            if(val.name.includes(_this.searchText)){
-              console.log(val.name,_this.searchText);
-              return val
-            }
-          })
-          this.productList = thisArr;
-        }
-      },
-      computed: {
-        checkArr(){
-          let arr = [];
-          this.productList.forEach(function(val,index){
-            if(val.isSelected){
-              arr.push(val.id);
-            }
-          })  
-          return arr
-        },
-        sum(){
-          let sumNum = 0;
-          this.productList.forEach(function(val,index){
-            if(val.isSelected){
-              sumNum+=val.price;
-            }
-          })
-          return sumNum;
-        }
-      }
-    })
-    
-  </script>
+        })
+    </script>
 </body>
+
 </html>
